# bayse_tools

./: LICENSE  README.md  setup.cfg
src/bayse_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bayse_tools/common_utilities/: bayseflow.py  captureutils.py  dnsutils.py  iputils.py  packet.py  utilities.py
src/bayse_tools/converter/: convert.py  generic_flowutils.py  interflow.py  interflowutils.py  ipfix.py  ipfixutils.py  netflow_v9.py  netflowutils.py  pcaputils.py  tests.py  zeekflow.py  zeekutils.py
src/bayse_tools/converter/tests/expectedOutputs/: testCase10_oneNonLocalFlowIsProcessable.conn.bf  testCase11_emptySansHeaders.conn.bf  testCase13_mtbDotcom_bangInPlaceOfDot_filtered.bf  testCase14_faturasatacada_phish_with_nonephemeral_dport9999_filtered.bf  testCase15_chromeWin10StartChromeBrowser_JSON.conn.bf  testCase16_chromeWin10VisitAmazonScamaDotCom_JSON.conn.bf  testCase17_oneLocalFlowIsProcessable_JSON.conn.bf  testCase18_oneNonLocalFlowIsProcessable_JSON.conn.bf  testCase19_icmp_plus_others_JSON.conn.bf  testCase1_chromeWin10StartChromeBrowser_filtered.bf  testCase20_oneNonLocalFlowIsProcessable_newstyle_JSON.conn.bf  testCase21_icmp_plus_others_newstyle_JSON.conn.bf  testCase22_oneInterflowPlusDNS.bf  testCase23_ipv6_withDNS_and_icmpv6_filtered.bf  testCase24_ipv6_withDNS_and_icmpv6.conn.bf  testCase25_icmpTunneling_filtered.bf  testCase26_icmpTunneling.conn.bf  testCase27_internetScanning_filtered.bf  testCase28_testForNegativeBytecountsSource_filtered.bf  testCase34_ipv6_and_icmpv6_csv.bf  (+14 more)
src/bayse_tools/streaming/: streaming.py
(+10 files in other folders)
