[metadata]
name = bayse-tools
version = 1.0.4
author = Bayse, Inc. 
author_email = david@bayse.io
description = A collection of tools useful across the Bayse ecosystem.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BayseIntelligence/bayse_tools
project_urls =
    Bug Tracker = https://github.com/BayseIntelligence/bayse_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    ipaddress >= 1.0.23
    jmespath >= 0.10.0
    pcapy-ng >= 1.0.9
    pathlib >= 1.0.1
    python-dateutil >= 2.8.2
    python-magic >= 0.4.24
    six >= 1.16.0
    urllib3 >= 1.26.6
    filelock >= 3.4.0
    jsonify >= 0.5
    argparse >= 1.4.0

[options.package_data]
* = *.pcapng, *.pcap, *.cap, *.log, *.if, *.netflow, *.bf

[options.packages.find]
where = src
